<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="above_ls">Keep above lock screen</string>
    <string name="app_name">Remote</string>
    <string name="cancel">Cancel</string>
    <string name="connect_dialog">Connection</string>
    <string name="connect_to_server">Connection to server</string>
    <string name="default_port">52000</string>
    <string name="default_host">192.168.</string>
    <string name="disco">Disconnecting...</string>
    <string name="menu_str">Menu</string>
    <string name="none"> - </string>
    <string name="ok">Connect</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="port">Server Port :</string>
    <string name="server">Server Adress :</string>
    <string name="unco">Not Connected</string>
    <string name="close">Sleep</string>
    <string name="streaming_on">Streaming On</string>
    <string name="streaming_off">Streaming Off</string>
    <string name="profile">Profile</string>
    <string name="invalid_port">Invalid port number</string>
</resources>
