<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/connect_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/server"
                  />

        <EditText android:id="@+id/hostET"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:minEms="30"
                  />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/port"
                  />

        <EditText android:id="@+id/portET"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="number|numberSigned|numberDecimal"
                  />

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <Button android:id="@+id/connect_dialog_ok_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ok"
                        />
                <Button android:id="@+id/connect_dialog_cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        />
        </LinearLayout>

</LinearLayout>

