<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >

  <Button android:id="@+id/connect_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/unco"
    android:onClick="showConnectDialog"/>

  <LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

      <TextView android:id="@+id/title_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/none"/>

      <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <TextView android:id="@+id/artist_text"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/none"/>

      </LinearLayout>

    </LinearLayout>

    <TextView android:id="@+id/album_text"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="top"
      android:text="@string/none"/>

  </LinearLayout>

  <TextView android:id="@+id/playback_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:text="@string/stopped"/>

  <LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom">

    <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="55dp"
      android:gravity="center">

      <ImageButton android:id="@+id/previous"
        style="@android:style/MediaButton.Previous"
        android:layout_width="55dp"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:contentDescription="Previous"
        android:clickable="false"
        android:onClick="previous"/>

      <ImageButton android:id="@+id/play_pause"
        style="@android:style/MediaButton.Pause"
        android:layout_width="55dp"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:contentDescription="Play/Pause"
        android:clickable="false"
        android:onClick="playPause"/>

      <ImageButton android:id="@+id/next"
        style="@android:style/MediaButton.Next"
        android:layout_width="55dp"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:contentDescription="Next"
        android:clickable="false"
        android:onClick="next"/>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>

